// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`src/components/Table/elements/Mobile render 1`] = `
<React.Fragment>
  <React.Fragment>
    <div
      className="makeStyles-itemData-4"
    >
      <div
        className="makeStyles-information-2"
      >
        <Typography
          className=""
          color="inherit"
          inline={true}
          variant="caption"
          weight="bold"
        >
          WITH SORT & CUSTOM WIDTH
        </Typography>
        <Typography
          className="makeStyles-informationLabel-3"
          color="inherit"
          inline={true}
          variant="subtitle2"
          weight="normal"
        >
          Data A
        </Typography>
      </div>
      <div
        className="makeStyles-information-2"
      >
        <Typography
          className=""
          color="inherit"
          inline={true}
          variant="caption"
          weight="bold"
        >
          DATE TIME
        </Typography>
        <Typography
          className="makeStyles-informationLabel-3"
          color="inherit"
          inline={true}
          variant="subtitle2"
          weight="normal"
        >
          10/11/2010 00:00
        </Typography>
      </div>
      <div
        className="makeStyles-information-2"
      >
        <Typography
          className=""
          color="inherit"
          inline={true}
          variant="caption"
          weight="bold"
        >
          CURRENCY
        </Typography>
        <Typography
          className="makeStyles-informationLabel-3"
          color="inherit"
          inline={true}
          variant="subtitle2"
          weight="normal"
        >
          Rp 20.000.000
        </Typography>
      </div>
      <Styled(MuiBox)
        display="flex"
      >
        <Status
          rounded={false}
          size="small"
          variant="success"
        >
          Completed
        </Status>
      </Styled(MuiBox)>
      <div>
        <pre>
          node
        </pre>
      </div>
      <div
        className="makeStyles-itemDataAction-5"
      >
        <Typography
          className=""
          color="primary-main"
          id="data-act-0"
          inline={false}
          onClick={[Function]}
          style={
            Object {
              "cursor": "pointer",
            }
          }
          variant="buttonS"
          weight="medium"
        >
          Lihat Detail
        </Typography>
      </div>
    </div>
    <div
      className="makeStyles-itemData-4"
    >
      <div
        className="makeStyles-information-2"
      >
        <Typography
          className=""
          color="inherit"
          inline={true}
          variant="caption"
          weight="bold"
        >
          WITH SORT & CUSTOM WIDTH
        </Typography>
        <Typography
          className="makeStyles-informationLabel-3"
          color="inherit"
          inline={true}
          variant="subtitle2"
          weight="normal"
        >
          Data B
        </Typography>
      </div>
      <div
        className="makeStyles-information-2"
      >
        <Typography
          className=""
          color="inherit"
          inline={true}
          variant="caption"
          weight="bold"
        >
          DATE TIME
        </Typography>
        <Typography
          className="makeStyles-informationLabel-3"
          color="inherit"
          inline={true}
          variant="subtitle2"
          weight="normal"
        >
          10/11/2010 00:00
        </Typography>
      </div>
      <div
        className="makeStyles-information-2"
      >
        <Typography
          className=""
          color="inherit"
          inline={true}
          variant="caption"
          weight="bold"
        >
          CURRENCY
        </Typography>
        <Typography
          className="makeStyles-informationLabel-3"
          color="inherit"
          inline={true}
          variant="subtitle2"
          weight="normal"
        >
          Rp 20.000.000
        </Typography>
      </div>
      <Styled(MuiBox)
        display="flex"
      >
        <Status
          rounded={false}
          size="small"
          variant="danger"
        >
          Rejected
        </Status>
      </Styled(MuiBox)>
      <div
        className="makeStyles-information-2"
      >
        <Typography
          className=""
          color="inherit"
          inline={true}
          variant="caption"
          weight="bold"
        >
          NODE CHILD
        </Typography>
        <Typography
          className="makeStyles-informationLabel-3"
          color="inherit"
          inline={true}
          variant="subtitle2"
          weight="normal"
        >
          -
        </Typography>
      </div>
      <div
        className="makeStyles-itemDataAction-5"
      >
        <Typography
          className=""
          color="primary-main"
          id="data-act-1"
          inline={false}
          onClick={[Function]}
          style={
            Object {
              "cursor": "pointer",
            }
          }
          variant="buttonS"
          weight="medium"
        >
          Lihat Detail
        </Typography>
      </div>
    </div>
  </React.Fragment>
  <div
    className="makeStyles-pageInformation-8"
  >
    <Typography
      className=""
      color="inherit"
      inline={false}
      variant="caption"
      weight="normal"
    >
      Showing 
      <strong>
        10
      </strong>
       data from
       
      <strong>
        10
         data
      </strong>
    </Typography>
  </div>
</React.Fragment>
`;

exports[`src/components/Table/elements/Mobile render/empty 1`] = `
<React.Fragment>
  <React.Fragment />
  <div
    className="makeStyles-boxNotFound-9"
  >
    <Styled(MuiBox)
      textAlign="center"
    >
      <StateMessage
        description=""
        ilustration={[Function]}
        maxWidth="100%"
        message="Data not found"
        size="large"
      />
    </Styled(MuiBox)>
  </div>
</React.Fragment>
`;

exports[`src/components/Table/elements/Mobile render/loading 1`] = `
<React.Fragment>
  <React.Fragment>
    <div
      className="makeStyles-itemData-28"
    >
      <div
        className="makeStyles-information-26"
      >
        <Typography
          className=""
          color="inherit"
          inline={true}
          variant="caption"
          weight="bold"
        >
          WITH SORT & CUSTOM WIDTH
        </Typography>
        <Typography
          className="makeStyles-informationLabel-27"
          color="inherit"
          inline={true}
          variant="subtitle2"
          weight="normal"
        >
          Data A
        </Typography>
      </div>
      <div
        className="makeStyles-information-26"
      >
        <Typography
          className=""
          color="inherit"
          inline={true}
          variant="caption"
          weight="bold"
        >
          DATE TIME
        </Typography>
        <Typography
          className="makeStyles-informationLabel-27"
          color="inherit"
          inline={true}
          variant="subtitle2"
          weight="normal"
        >
          10/11/2010 00:00
        </Typography>
      </div>
      <div
        className="makeStyles-information-26"
      >
        <Typography
          className=""
          color="inherit"
          inline={true}
          variant="caption"
          weight="bold"
        >
          CURRENCY
        </Typography>
        <Typography
          className="makeStyles-informationLabel-27"
          color="inherit"
          inline={true}
          variant="subtitle2"
          weight="normal"
        >
          Rp 20.000.000
        </Typography>
      </div>
      <Styled(MuiBox)
        display="flex"
      >
        <Status
          rounded={false}
          size="small"
          variant="success"
        >
          Completed
        </Status>
      </Styled(MuiBox)>
      <div>
        <pre>
          node
        </pre>
      </div>
      <div
        className="makeStyles-itemDataAction-29"
      >
        <Typography
          className=""
          color="primary-main"
          id="data-act-0"
          inline={false}
          onClick={[Function]}
          style={
            Object {
              "cursor": "pointer",
            }
          }
          variant="buttonS"
          weight="medium"
        >
          Lihat Detail
        </Typography>
      </div>
    </div>
    <div
      className="makeStyles-itemData-28"
    >
      <div
        className="makeStyles-information-26"
      >
        <Typography
          className=""
          color="inherit"
          inline={true}
          variant="caption"
          weight="bold"
        >
          WITH SORT & CUSTOM WIDTH
        </Typography>
        <Typography
          className="makeStyles-informationLabel-27"
          color="inherit"
          inline={true}
          variant="subtitle2"
          weight="normal"
        >
          Data B
        </Typography>
      </div>
      <div
        className="makeStyles-information-26"
      >
        <Typography
          className=""
          color="inherit"
          inline={true}
          variant="caption"
          weight="bold"
        >
          DATE TIME
        </Typography>
        <Typography
          className="makeStyles-informationLabel-27"
          color="inherit"
          inline={true}
          variant="subtitle2"
          weight="normal"
        >
          10/11/2010 00:00
        </Typography>
      </div>
      <div
        className="makeStyles-information-26"
      >
        <Typography
          className=""
          color="inherit"
          inline={true}
          variant="caption"
          weight="bold"
        >
          CURRENCY
        </Typography>
        <Typography
          className="makeStyles-informationLabel-27"
          color="inherit"
          inline={true}
          variant="subtitle2"
          weight="normal"
        >
          Rp 20.000.000
        </Typography>
      </div>
      <Styled(MuiBox)
        display="flex"
      >
        <Status
          rounded={false}
          size="small"
          variant="danger"
        >
          Rejected
        </Status>
      </Styled(MuiBox)>
      <div
        className="makeStyles-information-26"
      >
        <Typography
          className=""
          color="inherit"
          inline={true}
          variant="caption"
          weight="bold"
        >
          NODE CHILD
        </Typography>
        <Typography
          className="makeStyles-informationLabel-27"
          color="inherit"
          inline={true}
          variant="subtitle2"
          weight="normal"
        >
          -
        </Typography>
      </div>
      <div
        className="makeStyles-itemDataAction-29"
      >
        <Typography
          className=""
          color="primary-main"
          id="data-act-1"
          inline={false}
          onClick={[Function]}
          style={
            Object {
              "cursor": "pointer",
            }
          }
          variant="buttonS"
          weight="medium"
        >
          Lihat Detail
        </Typography>
      </div>
    </div>
  </React.Fragment>
  <React.Fragment>
    <div
      className="makeStyles-itemData-28"
    >
      <div
        className="makeStyles-information-26"
      >
        <Skeleton
          height={14}
          variant="rect"
          width={176}
        />
        <Styled(MuiBox)
          pt={0.5}
        >
          <Skeleton
            height={18}
            variant="rect"
            width={120}
          />
        </Styled(MuiBox)>
      </div>
      <div
        className="makeStyles-information-26"
      >
        <Skeleton
          height={14}
          variant="rect"
          width={116}
        />
        <Styled(MuiBox)
          pt={0.5}
        >
          <Skeleton
            height={18}
            variant="rect"
            width={120}
          />
        </Styled(MuiBox)>
      </div>
      <div
        className="makeStyles-information-26"
      >
        <Skeleton
          height={14}
          variant="rect"
          width={112}
        />
        <Styled(MuiBox)
          pt={0.5}
        >
          <Skeleton
            height={18}
            variant="rect"
            width={120}
          />
        </Styled(MuiBox)>
      </div>
      <div
        className="makeStyles-information-26"
      >
        <Styled(MuiBox)
          pt={0.5}
        >
          <Skeleton
            height={18}
            variant="rect"
            width={120}
          />
        </Styled(MuiBox)>
      </div>
      <div
        className="makeStyles-information-26"
      >
        <Skeleton
          height={14}
          variant="rect"
          width={120}
        />
        <Styled(MuiBox)
          pt={0.5}
        >
          <Skeleton
            height={18}
            variant="rect"
            width={120}
          />
        </Styled(MuiBox)>
      </div>
      <div
        className="makeStyles-itemDataAction-29"
      >
        <Skeleton
          height={14}
          variant="rect"
          width={80}
        />
      </div>
    </div>
    <div
      className="makeStyles-itemData-28"
    >
      <div
        className="makeStyles-information-26"
      >
        <Skeleton
          height={14}
          variant="rect"
          width={176}
        />
        <Styled(MuiBox)
          pt={0.5}
        >
          <Skeleton
            height={18}
            variant="rect"
            width={120}
          />
        </Styled(MuiBox)>
      </div>
      <div
        className="makeStyles-information-26"
      >
        <Skeleton
          height={14}
          variant="rect"
          width={116}
        />
        <Styled(MuiBox)
          pt={0.5}
        >
          <Skeleton
            height={18}
            variant="rect"
            width={120}
          />
        </Styled(MuiBox)>
      </div>
      <div
        className="makeStyles-information-26"
      >
        <Skeleton
          height={14}
          variant="rect"
          width={112}
        />
        <Styled(MuiBox)
          pt={0.5}
        >
          <Skeleton
            height={18}
            variant="rect"
            width={120}
          />
        </Styled(MuiBox)>
      </div>
      <div
        className="makeStyles-information-26"
      >
        <Styled(MuiBox)
          pt={0.5}
        >
          <Skeleton
            height={18}
            variant="rect"
            width={120}
          />
        </Styled(MuiBox)>
      </div>
      <div
        className="makeStyles-information-26"
      >
        <Skeleton
          height={14}
          variant="rect"
          width={120}
        />
        <Styled(MuiBox)
          pt={0.5}
        >
          <Skeleton
            height={18}
            variant="rect"
            width={120}
          />
        </Styled(MuiBox)>
      </div>
      <div
        className="makeStyles-itemDataAction-29"
      >
        <Skeleton
          height={14}
          variant="rect"
          width={80}
        />
      </div>
    </div>
  </React.Fragment>
  <div
    className="makeStyles-pageInformation-32"
  >
    <Typography
      className=""
      color="inherit"
      inline={false}
      variant="caption"
      weight="normal"
    >
      Showing 
      <strong>
        10
      </strong>
       data from
       
      <strong>
        10
         data
      </strong>
    </Typography>
  </div>
</React.Fragment>
`;

exports[`src/components/Table/elements/Mobile render/loadingRoot 1`] = `
<React.Fragment>
  <React.Fragment>
    <div
      className="makeStyles-itemData-20"
    >
      <div
        className="makeStyles-information-18"
      >
        <Skeleton
          height={14}
          variant="rect"
          width={176}
        />
        <Styled(MuiBox)
          pt={0.5}
        >
          <Skeleton
            height={18}
            variant="rect"
            width={120}
          />
        </Styled(MuiBox)>
      </div>
      <div
        className="makeStyles-information-18"
      >
        <Skeleton
          height={14}
          variant="rect"
          width={116}
        />
        <Styled(MuiBox)
          pt={0.5}
        >
          <Skeleton
            height={18}
            variant="rect"
            width={120}
          />
        </Styled(MuiBox)>
      </div>
      <div
        className="makeStyles-information-18"
      >
        <Skeleton
          height={14}
          variant="rect"
          width={112}
        />
        <Styled(MuiBox)
          pt={0.5}
        >
          <Skeleton
            height={18}
            variant="rect"
            width={120}
          />
        </Styled(MuiBox)>
      </div>
      <div
        className="makeStyles-information-18"
      >
        <Styled(MuiBox)
          pt={0.5}
        >
          <Skeleton
            height={18}
            variant="rect"
            width={120}
          />
        </Styled(MuiBox)>
      </div>
      <div
        className="makeStyles-information-18"
      >
        <Skeleton
          height={14}
          variant="rect"
          width={120}
        />
        <Styled(MuiBox)
          pt={0.5}
        >
          <Skeleton
            height={18}
            variant="rect"
            width={120}
          />
        </Styled(MuiBox)>
      </div>
      <div
        className="makeStyles-itemDataAction-21"
      >
        <Skeleton
          height={14}
          variant="rect"
          width={80}
        />
      </div>
    </div>
    <div
      className="makeStyles-itemData-20"
    >
      <div
        className="makeStyles-information-18"
      >
        <Skeleton
          height={14}
          variant="rect"
          width={176}
        />
        <Styled(MuiBox)
          pt={0.5}
        >
          <Skeleton
            height={18}
            variant="rect"
            width={120}
          />
        </Styled(MuiBox)>
      </div>
      <div
        className="makeStyles-information-18"
      >
        <Skeleton
          height={14}
          variant="rect"
          width={116}
        />
        <Styled(MuiBox)
          pt={0.5}
        >
          <Skeleton
            height={18}
            variant="rect"
            width={120}
          />
        </Styled(MuiBox)>
      </div>
      <div
        className="makeStyles-information-18"
      >
        <Skeleton
          height={14}
          variant="rect"
          width={112}
        />
        <Styled(MuiBox)
          pt={0.5}
        >
          <Skeleton
            height={18}
            variant="rect"
            width={120}
          />
        </Styled(MuiBox)>
      </div>
      <div
        className="makeStyles-information-18"
      >
        <Styled(MuiBox)
          pt={0.5}
        >
          <Skeleton
            height={18}
            variant="rect"
            width={120}
          />
        </Styled(MuiBox)>
      </div>
      <div
        className="makeStyles-information-18"
      >
        <Skeleton
          height={14}
          variant="rect"
          width={120}
        />
        <Styled(MuiBox)
          pt={0.5}
        >
          <Skeleton
            height={18}
            variant="rect"
            width={120}
          />
        </Styled(MuiBox)>
      </div>
      <div
        className="makeStyles-itemDataAction-21"
      >
        <Skeleton
          height={14}
          variant="rect"
          width={80}
        />
      </div>
    </div>
    <div
      className="makeStyles-itemData-20"
    >
      <div
        className="makeStyles-information-18"
      >
        <Skeleton
          height={14}
          variant="rect"
          width={176}
        />
        <Styled(MuiBox)
          pt={0.5}
        >
          <Skeleton
            height={18}
            variant="rect"
            width={120}
          />
        </Styled(MuiBox)>
      </div>
      <div
        className="makeStyles-information-18"
      >
        <Skeleton
          height={14}
          variant="rect"
          width={116}
        />
        <Styled(MuiBox)
          pt={0.5}
        >
          <Skeleton
            height={18}
            variant="rect"
            width={120}
          />
        </Styled(MuiBox)>
      </div>
      <div
        className="makeStyles-information-18"
      >
        <Skeleton
          height={14}
          variant="rect"
          width={112}
        />
        <Styled(MuiBox)
          pt={0.5}
        >
          <Skeleton
            height={18}
            variant="rect"
            width={120}
          />
        </Styled(MuiBox)>
      </div>
      <div
        className="makeStyles-information-18"
      >
        <Styled(MuiBox)
          pt={0.5}
        >
          <Skeleton
            height={18}
            variant="rect"
            width={120}
          />
        </Styled(MuiBox)>
      </div>
      <div
        className="makeStyles-information-18"
      >
        <Skeleton
          height={14}
          variant="rect"
          width={120}
        />
        <Styled(MuiBox)
          pt={0.5}
        >
          <Skeleton
            height={18}
            variant="rect"
            width={120}
          />
        </Styled(MuiBox)>
      </div>
      <div
        className="makeStyles-itemDataAction-21"
      >
        <Skeleton
          height={14}
          variant="rect"
          width={80}
        />
      </div>
    </div>
    <div
      className="makeStyles-itemData-20"
    >
      <div
        className="makeStyles-information-18"
      >
        <Skeleton
          height={14}
          variant="rect"
          width={176}
        />
        <Styled(MuiBox)
          pt={0.5}
        >
          <Skeleton
            height={18}
            variant="rect"
            width={120}
          />
        </Styled(MuiBox)>
      </div>
      <div
        className="makeStyles-information-18"
      >
        <Skeleton
          height={14}
          variant="rect"
          width={116}
        />
        <Styled(MuiBox)
          pt={0.5}
        >
          <Skeleton
            height={18}
            variant="rect"
            width={120}
          />
        </Styled(MuiBox)>
      </div>
      <div
        className="makeStyles-information-18"
      >
        <Skeleton
          height={14}
          variant="rect"
          width={112}
        />
        <Styled(MuiBox)
          pt={0.5}
        >
          <Skeleton
            height={18}
            variant="rect"
            width={120}
          />
        </Styled(MuiBox)>
      </div>
      <div
        className="makeStyles-information-18"
      >
        <Styled(MuiBox)
          pt={0.5}
        >
          <Skeleton
            height={18}
            variant="rect"
            width={120}
          />
        </Styled(MuiBox)>
      </div>
      <div
        className="makeStyles-information-18"
      >
        <Skeleton
          height={14}
          variant="rect"
          width={120}
        />
        <Styled(MuiBox)
          pt={0.5}
        >
          <Skeleton
            height={18}
            variant="rect"
            width={120}
          />
        </Styled(MuiBox)>
      </div>
      <div
        className="makeStyles-itemDataAction-21"
      >
        <Skeleton
          height={14}
          variant="rect"
          width={80}
        />
      </div>
    </div>
    <div
      className="makeStyles-itemData-20"
    >
      <div
        className="makeStyles-information-18"
      >
        <Skeleton
          height={14}
          variant="rect"
          width={176}
        />
        <Styled(MuiBox)
          pt={0.5}
        >
          <Skeleton
            height={18}
            variant="rect"
            width={120}
          />
        </Styled(MuiBox)>
      </div>
      <div
        className="makeStyles-information-18"
      >
        <Skeleton
          height={14}
          variant="rect"
          width={116}
        />
        <Styled(MuiBox)
          pt={0.5}
        >
          <Skeleton
            height={18}
            variant="rect"
            width={120}
          />
        </Styled(MuiBox)>
      </div>
      <div
        className="makeStyles-information-18"
      >
        <Skeleton
          height={14}
          variant="rect"
          width={112}
        />
        <Styled(MuiBox)
          pt={0.5}
        >
          <Skeleton
            height={18}
            variant="rect"
            width={120}
          />
        </Styled(MuiBox)>
      </div>
      <div
        className="makeStyles-information-18"
      >
        <Styled(MuiBox)
          pt={0.5}
        >
          <Skeleton
            height={18}
            variant="rect"
            width={120}
          />
        </Styled(MuiBox)>
      </div>
      <div
        className="makeStyles-information-18"
      >
        <Skeleton
          height={14}
          variant="rect"
          width={120}
        />
        <Styled(MuiBox)
          pt={0.5}
        >
          <Skeleton
            height={18}
            variant="rect"
            width={120}
          />
        </Styled(MuiBox)>
      </div>
      <div
        className="makeStyles-itemDataAction-21"
      >
        <Skeleton
          height={14}
          variant="rect"
          width={80}
        />
      </div>
    </div>
  </React.Fragment>
</React.Fragment>
`;
